feat(openapi): добавить Redoc документацию
